--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -15,6 +15,7 @@
         <ripple android:color="@android:color/white">
             <item android:id="@android:id/mask">
                 <shape android:shape="rectangle">
+                    <corners android:radius="25dp" />
                     <solid android:color="@android:color/white" />
                 </shape>
             </item>
